5 - Notebooks e Data/1 - Análises numéricas/Arquivos David/Atualizados/logDicas-master/data/2019-1/226/users/4161/executions/1575_1559.log
== TEST (2019-03-12 21:51:54) 
-- CODE:
print(.upper(Ada Lovelace foi a primeira progamadora da historia))
-- ERROR:
File "XXXX", line 1
    print(.upper(Ada Lovelace foi a primeira progamadora da historia))
          ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-12 21:53:28) 
-- CODE:
print(.upper("ada lovelace"))
-- ERROR:
File "XXXX", line 1
    print(.upper("ada lovelace"))
          ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-12 21:53:40) 
-- CODE:
print(.upper(ald))
-- ERROR:
File "XXXX", line 1
    print(.upper(ald))
          ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-12 21:55:15) 
-- CODE:
.upper(as)
-- ERROR:
File "XXXX", line 1
    .upper(as)
    ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-12 21:55:28) 
-- CODE:
print.upper(as)
-- ERROR:
File "XXXX", line 1
    print.upper(as)
                 ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-12 21:56:57) 
-- CODE:
print("Ada Lovelace foi a primeira progamadora da historia")
-- OUTPUT:
Ada Lovelace foi a primeira progamadora da historia
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-12 21:57:23) 
-- CODE:
print(.upper("Ada Lovelace foi a primeira progamadora da historia"))
-- ERROR:
File "XXXX", line 1
    print(.upper("Ada Lovelace foi a primeira progamadora da historia"))
          ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-12 21:57:48) 
-- CODE:
print("Ada Lovelace foi a primeira progamadora da historia".upper())
-- OUTPUT:
ADA LOVELACE FOI A PRIMEIRA PROGAMADORA DA HISTORIA
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-12 21:57:59) 
-- CODE:
print("Ada Lovelace foi a primeira progamadora da historia".upper())
-- EXECUTION TIME:
0.236174
-- TEST CASE 1:
---- input:
nonono
---- correct output:
ADA LOVELACE FOI A PRIMEIRA PROGRAMADORA DA HISTORIA.
---- user output:
ADA LOVELACE FOI A PRIMEIRA PROGAMADORA DA HISTORIA
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-12 21:58:06) 
-- CODE:
print("Ada Lovelace foi a primeira progamadora da historia".upper())
-- OUTPUT:
ADA LOVELACE FOI A PRIMEIRA PROGAMADORA DA HISTORIA
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-12 21:58:31) 
-- CODE:
print("ada aovelace foi a primeira progamadora da historia".upper())
-- OUTPUT:
ADA AOVELACE FOI A PRIMEIRA PROGAMADORA DA HISTORIA
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-12 21:58:34) 
-- CODE:
print("ada aovelace foi a primeira progamadora da historia".upper())
-- EXECUTION TIME:
0.288984
-- TEST CASE 1:
---- input:
nonono
---- correct output:
ADA LOVELACE FOI A PRIMEIRA PROGRAMADORA DA HISTORIA.
---- user output:
ADA AOVELACE FOI A PRIMEIRA PROGAMADORA DA HISTORIA
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-12 21:58:50) 
-- CODE:
print("ada aovelace foi a primeira progamadora da historia.".upper())
-- EXECUTION TIME:
0.150784
-- TEST CASE 1:
---- input:
nonono
---- correct output:
ADA LOVELACE FOI A PRIMEIRA PROGRAMADORA DA HISTORIA.
---- user output:
ADA AOVELACE FOI A PRIMEIRA PROGAMADORA DA HISTORIA.
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-12 21:58:52) 
-- CODE:
print("ada aovelace foi a primeira progamadora da historia.".upper())
-- OUTPUT:
ADA AOVELACE FOI A PRIMEIRA PROGAMADORA DA HISTORIA.
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-12 21:58:59) 
-- CODE:
print("ada lovelace foi a primeira progamadora da historia.".upper())
-- OUTPUT:
ADA LOVELACE FOI A PRIMEIRA PROGAMADORA DA HISTORIA.
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-12 21:59:02) 
-- CODE:
print("ada lovelace foi a primeira progamadora da historia.".upper())
-- OUTPUT:
ADA LOVELACE FOI A PRIMEIRA PROGAMADORA DA HISTORIA.
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-12 21:59:02) 
-- CODE:
print("ada lovelace foi a primeira progamadora da historia.".upper())
-- EXECUTION TIME:
0.131595
-- TEST CASE 1:
---- input:
nonono
---- correct output:
ADA LOVELACE FOI A PRIMEIRA PROGRAMADORA DA HISTORIA.
---- user output:
ADA LOVELACE FOI A PRIMEIRA PROGAMADORA DA HISTORIA.
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-12 21:59:05) 
-- CODE:
print("ada lovelace foi a primeira progamadora da historia.".upper())
-- OUTPUT:
ADA LOVELACE FOI A PRIMEIRA PROGAMADORA DA HISTORIA.
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-12 21:59:07) 
-- CODE:
print("ada lovelace foi a primeira progamadora da historia.".upper())
-- EXECUTION TIME:
0.208607
-- TEST CASE 1:
---- input:
nonono
---- correct output:
ADA LOVELACE FOI A PRIMEIRA PROGRAMADORA DA HISTORIA.
---- user output:
ADA LOVELACE FOI A PRIMEIRA PROGAMADORA DA HISTORIA.
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-12 21:59:16) 
-- CODE:
print("Ada Lovelace foi a primeira progamadora da historia.".upper())
-- EXECUTION TIME:
0.135641
-- TEST CASE 1:
---- input:
nonono
---- correct output:
ADA LOVELACE FOI A PRIMEIRA PROGRAMADORA DA HISTORIA.
---- user output:
ADA LOVELACE FOI A PRIMEIRA PROGAMADORA DA HISTORIA.
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-12 21:59:18) 
-- CODE:
print("Ada Lovelace foi a primeira progamadora da historia.".upper())
-- OUTPUT:
ADA LOVELACE FOI A PRIMEIRA PROGAMADORA DA HISTORIA.
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-12 21:59:26) 
-- CODE:
print("Ada Lovelace foi a primeira progamadora da historia.".upper())
-- EXECUTION TIME:
0.13761
-- TEST CASE 1:
---- input:
nonono
---- correct output:
ADA LOVELACE FOI A PRIMEIRA PROGRAMADORA DA HISTORIA.
---- user output:
ADA LOVELACE FOI A PRIMEIRA PROGAMADORA DA HISTORIA.
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-12 21:59:33) 
-- CODE:
print("Ada Lovelace foi a primeira progamadora da historia.".upper())
-- OUTPUT:
ADA LOVELACE FOI A PRIMEIRA PROGAMADORA DA HISTORIA.
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-12 22:00:46) 
-- CODE:
print("Ada Lovelace foi a primeira programadora da historia.".upper())
-- OUTPUT:
ADA LOVELACE FOI A PRIMEIRA PROGRAMADORA DA HISTORIA.
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-12 22:00:47) 
-- CODE:
print("Ada Lovelace foi a primeira programadora da historia.".upper())
-- EXECUTION TIME:
0.128052
-- TEST CASE 1:
---- input:
nonono
---- correct output:
ADA LOVELACE FOI A PRIMEIRA PROGRAMADORA DA HISTORIA.
---- user output:
ADA LOVELACE FOI A PRIMEIRA PROGRAMADORA DA HISTORIA.
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
